# opensearch-filter-proxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  recipe.json  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
data/: bulk.ndjson
scripts/: load_data_opensearch.txt  load_test_get.txt  load_test_post.txt  search.txt
src/: config.rs  handlers.rs  main.rs  repositories.rs  routers.rs  state.rs  utils.rs
src/body/: mod.rs  ndjson.rs
src/handlers/: opensearch.rs  proxy.rs  public.rs  security_filter.rs
src/repositories/: filter.rs  opensearch.rs  proxy.rs
src/routers/: opensearch.rs  proxy.rs  public.rs
src/src/: repositories.rs  routers.rs  state.rs
src/src/handlers/: proxy.rs
src/src/models/: health.rs
src/src/repositories/: opensearch.rs
src/src/routers/: opensearch.rs  public.rs
