[package]
name = "opensearch-filter-proxy"
version = "0.1.0"
authors = ["Brehl <gitlab@brehl.dev>"]
edition = "2024"

[dependencies]
axum = "0.8.4"
envy = "0.4.2"
opensearch = "2.3.0"
regex = "1.11.2"
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }